Changelog for GEMC
==================

5/29/18
 - added 10 and 20 cases for FASTMCMODE in physics list

3/21/18
 - added option RFSTART: Radio-frequency time model. Available options are:

    - "eventVertex, 0, 0, 0" (default): the RF time is the event start time + the light time-distance of the first particle from the point (0,0,0)
    - "eventTime".....................: the RF time is identical to the event start time

 - removed some warning on gcc 4.8.5

3/16/18:
 - added option FILTER_NULL_VARIABLES. If set to one, do not write variables with no valuable information.

.. Note::
	3/8/18 gemc 2.6 released.

|

3/5/18
 - Rafo: fixed bug in ctof and ftof hit process routines

3/2/18
 - added side to ctof digitization output

3/1/18
 - removing unnecessary true info from background hits. ProcID is -1 for background hits.

2/28/18
 - graph font smaller for linux so title can fit in 

2/22/18
 - adding true infos for background hits

2/21/18
 - added background hit merging for MM (barrel and forward)
 - fixed bug in getNextBackgroundEvent that increased event number incorrectly

2/16/18
 - added background hit for BST. Correction first commit: It was for BMT

2/5/18
 - added member userInfos vector<double> in the identifier class so users can pass variables from processID to digitization

1/26/18
 - removed volume name in getHitProcess function, was not necessary
 - moved background merging algorithms to MEventAction: fix bug where BG events were not written unless a sensitive detector was already hit.

1/16/18
 - added G4SynchrotronRadiationInMat. SYNRAD option activate that one if it is set to 2.

1/10/18
 - added G4SynchrotronRadiation process, off by default, activated with option SYNRAD

1/5/18
 - fixes case where no background file was provided
 - making gcc happier (silencing comparison warnings and unused vars)

12/12/17
 - background hits merging mechanism ready for testing

12/8/17
 - background read and passed correctly to SD

12/7/17