@@ -1,6 +1,13 @@
 Changelog for GEMC
 ==================
 
+6/14/18
+ - Micromegas digitization reading from correct CCDB table
+ - Indentation that makes sense on BMT_hitprocess. Removed unnecessary comment for runno = -1
+ - added PRODUCTIONCUTFORVOLUMES option. It is a list of volumes that will be assigned a production cut (in mm, last element of the list). Example:
+
+   - PRODUCTIONCUTFORVOLUMES="outerMount, taggerInnerShield, outerFlange, outerMount, nut1, main-cone, DSShieldFrontLead, 100" will set the production cut for those volumes to 10 cm.
+
 5/29/18
  - added 10 and 20 cases for FASTMCMODE in physics list
 
